# @(#) $Id$

noinst_DATA = $(M4TESTS)

EXTRA_DIST = $(M4TESTS)

M4TESTS = \
	cc-options.m4 \
	codeset.m4 \
	gettext.m4 \
	glibc21.m4 \
	gtk-doc.m4 \
	iconv.m4 \
	intmax.m4 \
	isc-posix.m4 \
	lcmessage.m4 \
	longdouble.m4 \
	longlong.m4 \
	pkg.m4 \
	po.m4 \
	printf-posix.m4 \
	progtest.m4 \
	signed.m4 \
	size_max.m4 \
	tools.m4 \
	wchar_t.m4 \
	wint_t.m4 \
	xsize.m4

