# @(#) $Id$

pixmapdatadir = $(pkgdatadir)/pixmaps

pixmapdata_DATA = \
	gwy_3d_base-24.png \
	gwy_bold-24.png \
	gwy_color_range-24.png \
	gwy_crop-24.png \
	gwy_cwt-24.png \
	gwy_data_arithmetic-24.png \
	gwy_distance-24.png \
	gwy_facet_level-24.png \
	gwy_filter-24.png \
	gwy_fit_plane-24.png \
	gwy_fit_triangle-24.png \
	gwy_fix_zero-24.png \
	gwy_fft-24.png \
	gwy_flip_horizontally-24.png \
	gwy_flip_vertically-24.png \
	gwy_fractal-24.png \
	gwy_grains-24.png \
	gwy_grains_graph-24.png \
	gwy_grains_remove-24.png \
	gwy_grains_water-24.png \
	gwy_graph-24.png \
	gwy_graph_fit_func-24.png \
	gwy_graph_gauss-24.png \
	gwy_graph_halfgauss-24.png \
	gwy_graph_measure-24.png \
	gwy_graph_palette-24.png \
	gwy_graph_pointer-24.png \
	gwy_graph_ruler-24.png \
	gwy_graph_zoom_fit-24.png \
	gwy_graph_zoom_in-24.png \
	gwy_graph_zoom_out-24.png \
	gwy_gwyddion-60.png \
	gwy_gwyddion-32.png \
	gwy_less-24.png \
	gwy_light_rotate-24.png \
	gwy_line_correction-24.png \
	gwy_mask_grow-24.png \
	gwy_mask_invert-24.png \
	gwy_mask_remove-24.png \
	gwy_mask_shrink-24.png \
	gwy_more-24.png \
	gwy_none-24.png \
	gwy_pointer-24.png \
	gwy_pointer_measure-24.png \
	gwy_polynom_remove-24.png \
	gwy_profile-24.png \
	gwy_rotate-24.png \
	gwy_rotate_180-24.png \
	gwy_rotate_90_ccw-24.png \
	gwy_rotate_90_cw-24.png \
	gwy_scale-24.png \
	gwy_scars-24.png \
	gwy_shader-24.png \
	gwy_spot_remove-24.png \
	gwy_stat_quantities-24.png \
	gwy_subscript-24.png \
	gwy_superscript-24.png \
	gwy_unrotate-24.png \
	gwy_value_invert-24.png \
	gwy_window_measure-24.png \
	gwy_z_scale-24.png \
	gwy_zoom_1_1-24.png \
	gwy_zoom_fit-24.png \
	gwy_zoom_in-24.png \
	gwy_zoom_out-24.png \
	gwyddion.ico \
	splash.png \
	cd_line.png \
	cd_rline.png \
	cd_step.png \
	cd_rstep.png

EXTRA_DIST = \
	makefile.msc \
	$(pixmapdata_DATA)
