# @(#) $Id$

pixmapdatadir = $(pkgdatadir)/pixmaps
icondatadir = $(datadir)/pixmaps

# Removed/missing:
#   graph_export_ascii
#   graph_export_bitmap
#   graph_export_vector
#   graph_gauss
#   measure_scale
#   none
#   pointer
#   polynom_remove (but see polynom)
#   slope_mask

# If you add new stock icons here, run ./utils/stockgen.py from the top-level
# directory to update source code declarations.
pixmapdata_DATA = \
	cd_line.png \
	cd_rline.png \
	cd_rstep.png \
	cd_step.png \
	gwy_3d_base-24.png \
	gwy_arithmetic-24.png \
	gwy_bold-20.png \
	gwy_cantilever-24.png \
	gwy_color_range-24.png \
	gwy_crop-24.png \
	gwy_cwt-24.png \
	gwy_data_measure-24.png \
	gwy_distance-24.png \
	gwy_drift-24.png \
	gwy_dwt-24.png \
	gwy_edge-24.png \
	gwy_facet_level-24.png \
	gwy_favourite-24.png \
	gwy_fft-24.png \
	gwy_filter-24.png \
	gwy_fix_zero-24.png \
	gwy_flip_horizontally-24.png \
	gwy_flip_vertically-24.png \
	gwy_fractal-24.png \
	gwy_gradient_horizontal-24.png \
	gwy_gradient_vertical-24.png \
	gwy_grains-24.png \
	gwy_grains_graph-24.png \
	gwy_grains_remove-24.png \
	gwy_grains_water-24.png \
	gwy_graph-24.png \
	gwy_graph_function-24.png \
	gwy_graph_halfgauss-24.png \
	gwy_graph_measure-24.png \
	gwy_graph_palette-24.png \
	gwy_graph_pointer-24.png \
	gwy_graph_ruler-24.png \
	gwy_graph_vertical-24.png \
	gwy_graph_zoom_fit-24.png \
	gwy_graph_zoom_in-24.png \
	gwy_graph_zoom_out-24.png \
	gwy_gwyddion-32.png \
	gwy_gwyddion-60.png \
	gwy_immerse-24.png \
	gwy_italic-20.png \
	gwy_less-24.png \
	gwy_level-24.png \
	gwy_level_triangle-24.png \
	gwy_light_rotate-24.png \
	gwy_line_level-24.png \
	gwy_logscale_horizontal-24.png \
	gwy_logscale_vertical-24.png \
	gwy_mask-24.png \
	gwy_mask_add-24.png \
	gwy_mask_circle-24.png \
	gwy_mask_circle_exclusive-24.png \
	gwy_mask_circle_inclusive-24.png \
	gwy_mask_editor-24.png \
	gwy_mask_exclude-24.png \
	gwy_mask_exclude_circle-24.png \
	gwy_mask_grow-24.png \
	gwy_mask_intersect-24.png \
	gwy_mask_invert-24.png \
	gwy_mask_rect_exclusive-24.png \
	gwy_mask_rect_inclusive-24.png \
	gwy_mask_remove-24.png \
	gwy_mask_shrink-24.png \
	gwy_mask_subtract-24.png \
	gwy_merge-24.png \
	gwy_more-24.png \
	gwy_palettes-24.png \
	gwy_pointer_measure-24.png \
	gwy_polynom-24.png \
	gwy_profile-24.png \
	gwy_remove_under_mask-24.png \
	gwy_rotate-24.png \
	gwy_rotate_180-24.png \
	gwy_rotate_90_ccw-24.png \
	gwy_rotate_90_cw-24.png \
	gwy_scale-24.png \
	gwy_scale_horizontally-24.png \
	gwy_scale_vertically-24.png \
	gwy_scars-24.png \
	gwy_shader-24.png \
	gwy_spot_remove-24.png \
	gwy_stat_quantities-24.png \
	gwy_subscript-20.png \
	gwy_superscript-20.png \
	gwy_unrotate-24.png \
	gwy_value_invert-24.png \
	gwy_zoom_1_1-24.png \
	gwy_zoom_fit-24.png \
	gwy_zoom_in-24.png \
	gwy_zoom_out-24.png \
	gwyddion.ico \
	splash.png

icondata_DATA = \
	gwyddion.png

# Note: splash screen source is too big to distribute in every tarball,
# check it out from CVS
xcf_sources = \
	cd_line.xcf \
	cd_rline.xcf \
	cd_rstep.xcf \
	cd_step.xcf \
	gwy_3d_base-24.xcf \
	gwy_cantilever-24.xcf \
	gwy_crop-24.xcf \
	gwy_direction-24.xcf \
	gwy_edge-24.xcf \
	gwy_fft-24.xcf \
	gwy_filter-24.xcf \
	gwy_flip_horizontally-24.xcf \
	gwy_flip_vertically-24.xcf \
	gwy_gradient-24.xcf \
	gwy_grains-24.xcf \
	gwy_graph-24.xcf \
	gwy_graph_zoom-24.xcf \
	gwy_less-24.xcf \
	gwy_level-24.xcf \
	gwy_light_rotate-24.xcf \
	gwy_markup-20.xcf \
	gwy_mask-24.xcf \
	gwy_measure-24.xcf \
	gwy_more-24.xcf \
	gwy_palette-24.xcf \
	gwy_polynom-24.xcf \
	gwy_profile-24.xcf \
	gwy_remove_under_mask-24.xcf \
	gwy_rotate-24.xcf \
	gwy_rotate_180-24.xcf \
	gwy_rotate_90_ccw-24.xcf \
	gwy_rotate_90_cw-24.xcf \
	gwy_scale-24.xcf \
	gwy_scale_horizontally-24.xcf \
	gwy_scale_vertically-24.xcf \
	gwy_shader-24.xcf \
	gwy_spot_remove-24.xcf \
	gwy_stat_quantities-24.xcf \
	gwy_unrotate-24.xcf \
	gwy_value_invert-24.xcf \
	gwy_zoom-24.xcf

EXTRA_DIST = \
	makefile.msc \
	makefile.msc.gwt \
	$(icondata_DATA) \
	$(pixmapdata_DATA) \
	$(xcf_sources)

MAINTAINERCLEANFILES = \
	makefile.msc

